 * xml2 sections: new command: rootNodeOnCreate = <node>
 * xml2 sections: not existing files will be created
    using the value of rootNodeOnCreate, fallback to 'rootnode' if not existing
 * osparser: include (append / insert) statements fixes on read file with encoding
 * osparser: importlib statements fixes on read file with encoding
 * osparser: less encoding reload in LoadValidLinesFromFile

-- d.oertel <d.oertel@uib.de> Mon, 05 Jul 2021 15:00

opsi-script (4.12.4.23) stable; urgency=low

 * osfuncwin2: fix for function resolveWinSymlink
 * new constant %opsiserviceClientId% (FQDN in service context, empty without)
 * parameter /clientid if present wil be ussed as preferred source for %hostid%
 * new parameter /depotpath (only together with /opsiservice) to pass the path to the depot
 * linux opsi-script library search path:
    %scriptpath%                     // standard by definition
    %ScriptPath%/../lib              // standard by definition
    './lib'                          // new standard directory in opsi-script directory
    '/usr/share/opsi-script/lib'     // backward compatibility directory
 * linux skin directory search path:
    '/usr/share/opsi-script/customskin'  // custom skin directory
    './skin'                          // new standard skin directory in opsi-script directory
    '/usr/share/opsi-script/skin'     // backward compatibility directory
 * linux locale directory search path:
    './locale'                        // new standard locale directory in opsi-script directory
    '/usr/share/locale/....'          // backward compatibility directory
 * removing links to http://www.opsi.org/credits/
 * osinteractivegui: set copyright tro 1995-2021
 * Fixes detection of w10 release > 2009 (21h1) (osparser) ; fixes #4665
 * New cli parameter /ServiceBatch  if /serviceBatch then also needed:
          /ClientId <> /opsiservice <> /username <> /password <> /productId <> and <script path>